# devcontainer_blueprint

./: Makefile  pyproject.toml  readme.md
.devcontainer/: Dockerfile  devcontainer.json
